# ML-Labs

./: README.md  pyproject.toml
learning/: kmeans.py
learning/leetcode/: README.md
learning/leetcode/binary tree/: 104. Maximum Depth of Binary Tree.py  199. Binary Tree Right Side View.py  236. Lowest Common Ancestor of a Binary Tree.py  bfs.py
learning/leetcode/heap/: 215. Kth Largest Element in an Array.py
learning/leetcode/sliding window/: 643. Maximum Average Subarray I.py
learning/leetcode/stack/: 2390. Removing Stars From a String.py
learning/leetcode/trie/: 208. Implement Trie (Prefix Tree).py
learning/neetcode/: README.md
learning/neetcode/ml/: code_gpt.py  digit_classifier.py  gpt_dataset.py  gradient_descent.py  intro_to_natural_language_processing.py  linear_regression_backward.py  linear_regression_forward.py  make_gpt_talk_back.py  multi_headed_self_attention.py  self_attention.py  sentiment_analysis.py  torch_basics.py  transformer_block.py
learning/python/: access_api_on_mp.py  access_vllm_on_mp.py  decorator.py  simple_api.py  wrap_to_collect_objects.py
learning/python/mock/: README.md  client.py
learning/python/mock/unittest/: test_case1.py  test_case2.py  test_case3.py  test_case4.py  test_mock.py
learning/torch/: README.md  cross_entropy.py  mean_square_error.py  softmax.py
llm/: download_model.py  llama_cpp_python_serve.py
