[tool.poetry]
name = "ml-labs"
version = "0.1.0"
description = ""
authors = ["yuchengml <g1677321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
conda-lock = "^2.5.6"
torch = "^2.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
vllm = "0.6.6"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
