[tool.poetry]
name = "ml-labs"
version = "0.1.0"
description = ""
authors = ["yuchengml <g1677321@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
conda-lock = "^2.5.6"
torch = "^2.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
huggingface-hub = {extras = ["cli"], version = "^0.26.1"}
transformers = "^4.46.0"
llamacpp = "^0.1.14"
sentencepiece = "^0.2.0"
accelerate = ">=0.26.0"
vllm = "0.6.6"
uvicorn = "^0.34.2"
ruff = "^0.11.6"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
